# unity-scopes-api

./: .bzrignore  CMakeLists.txt  CONFIGFILES  CTestCustom.cmake.in  HACKING  INSTALL  Jenkinsfile  README  RELEASE_NOTES.md  RELEASE_NOTES.txt  STRUCTS  TODO  _clang-format  astyle-config  bileto_convert_to_vivid  bileto_pre_release_hook  tsan-suppress  unity-scopes.map  valgrind-suppress
data/: CMakeLists.txt  Groups.ini  Registry.ini.in  Runtime.ini.in  SSRegistry.ini.in  SSRuntime.ini.in  libunity-scopes-qt.pc.in  libunity-scopes.pc.in  libunity-scopes.py  scope-registry.conf.in  smart-scopes-proxy.conf.in
demo/: CMakeLists.txt  Factory.ini.in  Ice.Config.in  Ice.Registry.Config.in  README  Registry.ini.in  RegistryMain.ini.in  Runtime.ini.in  Zmq.Registry.ini.in  Zmq.ini.in  client.cpp  scope-A.cpp  scope-B.cpp  scope-C.cpp  scope-D.cpp  scope-slow.cpp  scoperunner-A.cpp  scoperunner-BC.cpp  scoperunner-D.cpp  scoperunner-slow.cpp
demo/click/: CMakeLists.txt
demo/click/scope-click/: CMakeLists.txt  click-build.sh  scope-click.cpp  scope-click.ini.in  scope-click.map
demo/scope-groups/: CMakeLists.txt  GroupBC.ini.in
demo/scopes/: CMakeLists.txt
demo/scopes/scope-A/: CMakeLists.txt  scope-A.cpp  scope-A.ini.in  scope-A.map  scope-A.map.in
demo/scopes/scope-B/: CMakeLists.txt  scope-B.cpp  scope-B.ini.in
demo/scopes/scope-C/: CMakeLists.txt  scope-C.cpp  scope-C.ini.in
demo/scopes/scope-D/: CMakeLists.txt  scope-D.cpp  scope-D.ini.in
demo/scopes/scope-N/: CMakeLists.txt  scope-N.cpp  scope-N.ini.in
demo/scopes/scope-S/: CMakeLists.txt  scope-S.cpp  scope-S.ini.in
demo/stand-alone/: CMakeLists.txt  README  Runtime.ini.in  stand-alone-client.cpp
include/: CMakeLists.txt  ObjectProxy.h  QueryBase.h  Reply.h  VariantMap.h
include/internal/: MWQuery.h  MWQueryCtrl.h  MWReply.h  MWScope.h  MiddlewareFactory.h  MiddlewareFactoryConfig.h  QueryCtrlImpl.h  QueryCtrlObject.h  QueryObject.h  RegistryObject.h  ReplyImpl.h  RuntimeImpl.h  ScopeImpl.h  ScopeLoader.h  ScopeObject.h  ThreadSafeQueue.h
include/internal/zmq_middleware/: ObjectAdapter.h  QueryCtrlI.h  RegistryI.h  ZmqObjectProxy.h  ZmqQuery.h  ZmqQueryCtrl.h  ZmqRegistry.h
include/scopes/: ActivationBase.h  ActivationListener.h  ActivationReceiverBase.h  ActivationResponse.h  Annotation.h  AnnotationObjectBase.h  CategorisedResult.h  Category.h  CategoryRenderer.h  FilterBase.h  FilterOption.h  FilterState.h  Hyperlink.h  Link.h  ListenerBase.h  ObjectProxy.h  ObjectProxyFwd.h  OptionSelector.h  OptionSelectorFilter.h  PlacementHint.h  PreviewReply.h  PreviewWidget.h  Query.h  QueryBase.h  QueryCtrl.h  QueryCtrlProxyFwd.h  ReceiverBase.h  Registry.h  RegistryProxyFwd.h  Reply.h  ReplyBase.h  ReplyProxyFwd.h  Result.h  ResultItem.h  Runtime.h  Scope.h  ScopeBase.h  ScopeExceptions.h  ScopeMetadata.h  ScopeProxyFwd.h  (+2 more)
include/scopes/internal/: AbstractObject.h  ActivationBaseImpl.h  ActivationQueryObject.h  ActivationReplyObject.h  ActivationResponseImpl.h  AnnotationImpl.h  (+59 more)
include/unity/: CMakeLists.txt
scoperegistry/: CMakeLists.txt  DirWatch.cpp  DirWatch.h  DirWatcher.cpp  DirWatcher.h  FileUtils.cpp  FileUtils.h  FileWatcher.cpp  FileWatcher.h  FindFiles.cpp  FindFiles.h  ScopeSet.cpp  ScopeSet.h  ScopesWatcher.cpp  ScopesWatcher.h  SignalThread.cpp  SignalThread.h  scoperegistry.cpp
src/: ActivationBase.cpp  ActivationListener.cpp  ActivationResponse.cpp  Annotation.cpp  AnnotationObjectBase.cpp  CMakeLists.txt  CategorisedResult.cpp  Category.cpp  CategoryRenderer.cpp  FilterBase.cpp  FilterOption.cpp  FilterState.cpp  Hyperlink.cpp  Link.cpp  ListenerBase.cpp  ObjectProxy.cpp  OptionSelector.cpp  OptionSelectorFilter.cpp  PlacementHint.cpp  PreviewReply.cpp  PreviewWidget.cpp  Query.cpp  QueryBase.cpp  QueryCtrl.cpp  ReceiverBase.cpp  Registry.cpp  Reply.cpp  ReplyBase.cpp  Result.cpp  ResultItem.cpp  Runtime.cpp  Scope.cpp  ScopeBase.cpp  ScopeExceptions.cpp  ScopeMetadata.cpp  Variant.cpp  Version.cpp  libunity-scopes.pc.in
src/internal/: AbstractObject.cpp  ActivationBaseImpl.cpp  ActivationQueryObject.cpp  ActivationReplyObject.cpp  ActivationResponseImpl.cpp  AnnotationImpl.cpp  AnnotationObjectBaseImpl.cpp  CMakeLists.txt  CategorisedResultImpl.cpp  CategoryImpl.cpp  CategoryRegistry.cpp  CategoryRendererImpl.cpp  ConfigBase.cpp  DynamicLoader.cpp  FilterBaseImpl.cpp  FilterOptionImpl.cpp  FilterStateImpl.cpp  HyperlinkImpl.cpp  LinkImpl.cpp  MWObject.cpp  MWQuery.cpp  MWQueryCtrl.cpp  MWRegistry.cpp  MWReply.cpp  MWScope.cpp  MiddlewareBase.cpp  MiddlewareFactory.cpp  MiddlewareFactoryConfig.cpp  ObjectProxyImpl.cpp  OptionSelectorFilterImpl.cpp  OptionSelectorImpl.cpp  PlacementHintImpl.cpp  PreviewWidgetImpl.cpp  QueryBaseImpl.cpp  QueryCtrlImpl.cpp  QueryCtrlObject.cpp  QueryImpl.cpp  QueryObject.cpp  Reaper.cpp  RegistryConfig.cpp  (+18 more)
src/scopes/: AbstractScopeBase.cpp  ActionMetadata.cpp  ActivationBase.cpp  ActivationListener.cpp  ActivationListenerBase.cpp  ActivationQueryBase.cpp  ActivationResponse.cpp  Annotation.cpp  CMakeLists.txt  CannedQuery.cpp  CategorisedResult.cpp  Category.cpp  CategoryRenderer.cpp  ChildScope.cpp  ColumnLayout.cpp  CompletionDetails.cpp  DateTimePickerFilter.cpp  Department.cpp  FilterBase.cpp  FilterGroup.cpp  FilterOption.cpp  FilterState.cpp  GeoCoordinate.cpp  Link.cpp  ListenerBase.cpp  Location.cpp  Object.cpp  ObjectProxy.cpp  OnlineAccountClient.cpp  OperationInfo.cpp  OptionSelectorFilter.cpp  PreviewListener.cpp  PreviewListenerBase.cpp  PreviewQuery.cpp  PreviewQueryBase.cpp  PreviewReply.cpp  PreviewReplyBase.cpp  PreviewWidget.cpp  PreviewWidgetDefinitionBuilder.cpp  Query.cpp  (+30 more)
src/unity/: CMakeLists.txt
test/: CMakeLists.txt  scope-api-testconfig.h.in
test/abi-compliance/: CMakeLists.txt  abi.xml.in  check-abi-compliance.sh.in  gen-abi-dump.sh.in  suppressions
test/autopkg/: CMakeLists.txt
test/copyright/: check_copyright.sh
test/gtest/: CMakeLists.txt
test/headers/: CMakeLists.txt  check_global_usage.py  compile_headers.py  includechecker.py
test/whitespace/: CMakeLists.txt  check_whitespace.py  check_whitespace.sh
(+1599 files in other folders)
